Fix related to #32734: crash saving blend file from render_pre callback. Not sure I want to recommend anyone doing this, but the fix is simple.